--- a/style.css
+++ b/style.css
@@ -115,7 +115,6 @@ main {
   font-weight: 400;
   transition: all 0.2s;
 
-  background-color: white;
   background-color: rgba(255, 255, 255, 0.6);
   backdrop-filter: blur(10px);
 
@@ -226,7 +225,52 @@ main {
   margin-bottom: 12px;
 }
 
+.modal h2 {
+  font-size: 20px;
+  margin-top: 20px;
+}
+
 .modal p {
   font-size: 16px;
   line-height: 1.6;
+}
+.input {
+  position: relative;
+  display: flex;
+  margin-top: 10px;
+}
+
+.input input[type="text"] {
+  width: 100%;
+  border: 2px solid #aaa;
+  border-radius: 4px;
+  margin: 8px 0;
+  outline: none;
+  padding: 8px;
+  box-sizing: border-box;
+  transition: 0.3s;
+  padding-left: 40px;
+}
+
+.input i {
+  position: absolute;
+  left: 0;
+  font-size: 18px;
+  padding: 9px 8px;
+  color: #aaa;
+  transition: 0.3s;
+}
+
+#player1 {
+  top: 10px;
+}
+
+#player2 {
+  top: 60px;
+}
+
+.btn--play {
+  left: 90%;
+  bottom: 0;
+  background-color: rgba(200, 200, 200, 0.6);
 }
