input validation added removing position absolute for buttons

--- a/style.css
+++ b/style.css
@@ -19,24 +19,28 @@ body {
   background-image: linear-gradient(to top left, #753682 0%, #bf2e34 100%);
   display: flex;
   align-items: center;
-  justify-content: center;
 }
 
 /* LAYOUT */
-main {
-  position: relative;
+.player--wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0 auto;
+  margin-top: 10px;
   width: 100rem;
-  height: 60rem;
+  height: 55rem;
   background-color: rgba(255, 255, 255, 0.35);
   backdrop-filter: blur(200px);
   filter: blur();
   box-shadow: 0 3rem 5rem rgba(0, 0, 0, 0.25);
   border-radius: 9px;
   overflow: hidden;
-  display: flex;
 }
 
 .player {
+  height: 100%;
+  width: 100%;
   flex: 50%;
   padding: 9rem;
   display: flex;
@@ -61,6 +65,7 @@ main {
   font-weight: 300;
   color: #c7365f;
   margin-bottom: auto;
+  text-align: center;
 }
 
 .player--active {
@@ -72,7 +77,6 @@ main {
 .player--active .score {
   font-weight: 400;
 }
-
 .player--active .current {
   opacity: 1;
 }
@@ -84,6 +88,7 @@ main {
   color: #fff;
   width: 65%;
   padding: 2rem;
+  margin-top: 80px;
   text-align: center;
   transition: all 0.75s;
 }
@@ -100,11 +105,15 @@ main {
 }
 
 /* ABSOLUTE POSITIONED ELEMENTS */
-.btn {
+.btn--wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
   position: absolute;
+}
+.btn {
   width: 195px;
-  left: 50%;
-  transform: translateX(-50%);
   color: #444;
   background: none;
   border: none;
@@ -114,13 +123,11 @@ main {
   cursor: pointer;
   font-weight: 400;
   transition: all 0.2s;
-
-  background-color: rgba(255, 255, 255, 0.6);
   backdrop-filter: blur(10px);
-
   padding: 0.7rem 2.5rem;
   border-radius: 50rem;
   box-shadow: 0 1.75rem 3.5rem rgba(0, 0, 0, 0.1);
+  margin: 15px auto;
 }
 
 .btn::first-letter {
@@ -129,18 +136,15 @@ main {
   margin-right: 0.7rem;
 }
 
-.btn--new {
-  top: 4rem;
+.btn--primary {
+  background-color: rgba(255, 255, 255, 0.6);
 }
-.btn--roll {
-  top: 39.3rem;
-}
-.btn--hold {
-  top: 46.1rem;
+.btn--secondary {
+  background-color: rgba(200, 200, 200, 0.6);
 }
 
 .btn:active {
-  transform: translate(-50%, 3px);
+  transform: translate(3px, -50%);
   box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.15);
 }
 
@@ -149,11 +153,9 @@ main {
 }
 
 .dice {
-  position: absolute;
-  left: 50%;
-  top: 16.5rem;
-  transform: translateX(-50%);
   height: 10rem;
+  margin-top: 50px;
+  margin-bottom: 50px;
   box-shadow: 0 2rem 5rem rgba(0, 0, 0, 0.2);
 }
 
@@ -168,6 +170,9 @@ main {
 
 .hidden {
   display: none;
+}
+.transparent {
+  opacity: 0;
 }
 
 /* Modal Styles */
@@ -237,6 +242,7 @@ main {
 .input {
   position: relative;
   display: flex;
+  justify-content: space-between;
   margin-top: 10px;
 }
 
@@ -269,8 +275,42 @@ main {
   top: 60px;
 }
 
-.btn--play {
-  left: 90%;
-  bottom: 0;
-  background-color: rgba(200, 200, 200, 0.6);
+
+@media (max-width: 62.5em) {
+  html {
+    font-size: 33%;
+  }
+  body {
+    align-items: flex-start;
+  }
+  .player--wrapper {
+    flex-direction: column;
+    width: 90%;
+    height: 80%;
+    margin: 10px auto;
+  }
+  .player {
+    flex-direction: row;
+    padding: 5rem;
+  }
+  .global {
+    width: 50%;
+    text-align: center;
+  }
+  .current {
+    margin: 0 auto;
+    width: 50%;
+  }
+  .dice {
+    top: 48rem;
+  }
+  .btn {
+    bottom: 0;
+  }
+  .btn--wrapper {
+    bottom: 0;
+  }
+  .btn::first-letter {
+    display: none;
+  }
 }
