--- a/style.css
+++ b/style.css
@@ -35,13 +35,11 @@ body {
   filter: blur();
   box-shadow: 0 3rem 5rem rgba(0, 0, 0, 0.25);
   border-radius: 9px;
-  overflow: hidden;
 }
 
 .player {
-  height: 100%;
   width: 100%;
-  flex: 50%;
+  height: 100%;
   padding: 9rem;
   display: flex;
   flex-direction: column;
@@ -104,7 +102,6 @@ body {
   font-size: 3.5rem;
 }
 
-/* ABSOLUTE POSITIONED ELEMENTS */
 .btn--wrapper {
   display: flex;
   flex-direction: column;
@@ -275,7 +272,6 @@ body {
   top: 60px;
 }
 
-
 @media (max-width: 62.5em) {
   html {
     font-size: 33%;
@@ -287,7 +283,7 @@ body {
     flex-direction: column;
     width: 90%;
     height: 80%;
-    margin: 10px auto;
+    margin: 20px auto;
   }
   .player {
     flex-direction: row;
@@ -301,16 +297,52 @@ body {
     margin: 0 auto;
     width: 50%;
   }
-  .dice {
-    top: 48rem;
+  .btn--wrapper {
+    order: 3;
+    position: absolute;
+    flex-direction: row;
+    align-items: flex-end;
+    bottom: -18%;
   }
   .btn {
-    bottom: 0;
+    width: 110px;
+    margin: 0 6px;
   }
-  .btn--wrapper {
-    bottom: 0;
+  .btn--primary {
+    background-color: rgba(255, 255, 255, 0.9);
   }
-  .btn::first-letter {
+  .dice {
+    position: absolute;
+    bottom: 1100%;
+  }
+  .modal {
+    width: 100%;
+  }
+  .modal h1 {
+    font-size: 20px;
+    margin-bottom: 12px;
+  }
+  .modal h2 {
+    font-size: 16px;
+    margin-top: 20px;
+  }
+
+  .modal p {
+    font-size: 12px;
+    line-height: 1.6;
+  }
+  .modal i {
     display: none;
+  }
+  .input {
+    align-items: center;
+  }
+  .input input[type="text"] {
+    width: 75%;
+    font-size: 12px;
+    padding-left: 15px;
+  }
+  .btn--play {
+    width: 125px;
   }
 }
